--- a/CNewsProject/Views/Shared/Components/ArticleLocker/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/ArticleLocker/Default.cshtml
@@ -14,7 +14,7 @@
             btnText = "Remove your Like from this.article";
         }
         // asp-controller="News" asp-action="Article">
-        <div class="card mb-4 w-100">
+        <div class="card mb-4 w-100 hoverable">
             <img class="card-img-top" src="@Model.Article.ImageLink" alt="@Model.Article.Headline">
             <div class="card-body">
                 <h5 class="card-title">@Model.Article.Headline</h5>
