--- a/CNewsProject/Views/Admin/AdminEdit.cshtml
+++ b/CNewsProject/Views/Admin/AdminEdit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1 class="bg-info text-white">Update User</h1>
-<a asp-action="Index" class="btn btn-secondary">Back</a>
+<a asp-action="Users" class="btn btn-secondary">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
 <form asp-action="AdminEdit" method="post">
