--- a/CNewsProject/Views/Shared/_LayoutNewsFire.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNewsFire.cshtml
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #595959">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark navfire" style="background-color: #595959">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="News" asp-action="Index">
                     <img src="/content/images/cnewslogofire.png" alt="News Logo" style="height: 50px;">
