--- a/CNewsProject/Views/Shared/_LoginPartial.cshtml
+++ b/CNewsProject/Views/Shared/_LoginPartial.cshtml
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item">
             <form asp-controller="Account" asp-action="Logout">
-                <a type="submit" class="nav-link btn btn-link text-light">Logout</a>
+                <button type="submit" class="nav-link btn btn-link text-light">Logout</button>
             </form>
         </li>
     }
