I added aside to the front (index) page. I started to add it to the local.

--- a/CNewsProject/Views/News/Index.cshtml
+++ b/CNewsProject/Views/News/Index.cshtml
@@ -1,13 +1,28 @@
 @model FrontPageArticlesVM
 
-<section class="main-article">
-	<partial name="_ArticlePartial" model="@Model.MainArticle" />
-</section>
-<section class="articles row">
-	@foreach (var article in Model.NotMainButStillImportantArticles)
-	{
-		<div class="col-6">
-		  <partial name="_ArticlePartial" model="article" />
+<div class="row">
+	<div class="col-9">
+		<section class="main-article">
+			<partial name="_ArticlePartial" model="@Model.MainArticle" />
+		</section>
+		<section class="articles row">
+			@foreach (var article in Model.NotMainButStillImportantArticles)
+			{
+				<div class="col-6">
+					<partial name="_ArticlePartial" model="article" />
+				</div>
+			}
+		</section>
+	</div>
+	
+	<aside class="col-3">
+		<div id="VCWeather">
+			<vc:weather name-of-city=""></vc:weather>
 		</div>
-	}
-</section>
+		<vc:exchange></vc:exchange>
+	</aside>
+</div>
+
+
+
+	
