--- a/CNewsProject/Views/News/Search.cshtml
+++ b/CNewsProject/Views/News/Search.cshtml
@@ -27,7 +27,7 @@
         {
             foreach (var article in Model)
             {
-                <div class="col-3">
+                <div class="col-md-3 col-sm-6 col-12">
                     <partial name="_ArticlePartial" model="article" />
                 </div>
             }
