--- a/CNewsProject/Views/Shared/_CookieConsentPartial.cshtml
+++ b/CNewsProject/Views/Shared/_CookieConsentPartial.cshtml
@@ -7,6 +7,7 @@
             </div>
             <div class="col-md-4 text-md-end mt-2 mt-md-0">
                 <button id="acceptCookies" class="btn btn-success">Accept</button>
+                <button id="declineCookies" class="btn btn-danger">Decline</button>
             </div>
         </div>
     </div>
