--- a/CNewsProject/Views/News/Local.cshtml
+++ b/CNewsProject/Views/News/Local.cshtml
@@ -1,47 +1,37 @@
 @model CategoryPageArticlesVM
 
 @{
-    // vv DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX vv
-    if (User.Identity.IsAuthenticated)
-    {
-        if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
-        {
-            Layout = "_LayoutFire";
-            ViewData["Title"] = "Local Fire News";
-        }
-        else                                             // << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
-        {
-            Layout = "_Layout";
-            ViewData["Title"] = "Local News";
-        }
-    }
-    else
-    {
-        Layout = "_Layout";
-        ViewData["Title"] = "Local News";
-    }
-    // ^^ DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX ^^
+	// vv DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX vv
+	if (User.Identity.IsAuthenticated)
+	{
+		if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
+		{
+			Layout = "_LayoutNewsFire";
+			ViewData["Title"] = "Local Fire News";
+		}
+		else                                             // << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
+		{
+			Layout = "_LayoutNews";
+			ViewData["Title"] = "Local News";
+		}
+	}
+	else
+	{
+		Layout = "_LayoutNews";
+		ViewData["Title"] = "Local News";
+	}
+	// ^^ DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX ^^
 }
 
-<div class="row">
-    <div class="col-9>
-        <section class="main-article">
-            <partial name="_ArticlePartial" model="@Model.MainArticle" />
-        </section>
-        <section class="articles row">
-            @foreach (var article in Model.NotMainButStillImportantArticles)
-            {
-                <div class="col-6">
-                    <partial name="_ArticlePartial" model="article" />
-                </div>
-            }
-        </section>
-    </div>
-    <aside class="col-3">
-        <div id="VCWeather">
-            <vc:weather name-of-city=""></vc:weather>
-        </div>
-        <vc:exchange></vc:exchange>
-    </aside>
-</div>
-	
+<section class="main-article">
+	<partial name="_ArticlePartial" model="@Model.MainArticle" />
+</section>
+<section class="articles row">
+	@foreach (var article in Model.NotMainButStillImportantArticles)
+	{
+		<div class="col-md-6 col-12">
+			<partial name="_ArticlePartial" model="article" />
+		</div>
+	}
+</section>
+
