--- a/CNewsProject/Views/Shared/Components/SidebarHeadlines/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/SidebarHeadlines/Default.cshtml
@@ -11,10 +11,11 @@
 		td > a {
 			color: black;
 			text-decoration: none;
+			display:block;
 		}
 
 		td:hover {
-			background-color: lightgray
+			background-color: lightgray;
 		}
 </style>
 
@@ -25,7 +26,7 @@
 		@{
 			foreach (var item in Model.localArticles)
 			{
-				<tr><td><a style="" asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
+				<tr><td><a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
 			}
 		}
 	</table><br />
@@ -34,7 +35,7 @@
 		@{
 			foreach (var item in Model.swedenArticles)
 			{
-				<tr><td><a style="" asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
+				<tr><td><a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
 			}
 		}
 	</table><br />
@@ -43,7 +44,7 @@
 		@{
 			foreach (var item in Model.worldArticles)
 			{
-				<tr><td><a style="" asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
+				<tr><td><a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
 			}
 		}
 	</table><br />
@@ -52,7 +53,7 @@
 		@{
 			foreach (var item in Model.economyArticles)
 			{
-				<tr><td><a style="" asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
+				<tr><td><a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
 			}
 		}
 	</table><br />
@@ -61,7 +62,7 @@
 		@{
 			foreach (var item in Model.sportArticles)
 			{
-				<tr><td><a style="" asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
+				<tr><td><a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
 			}
 		}
 	</table>
