--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -17,14 +17,14 @@
 		<div class="card">
 			<h3 id="place" >Weather: @Model.NameOfCity</h3>
 			<form>
-				<div class="mb-3 mt-3">
-					<label for=" City" class="form-label">City:</label>
-					<input type="text" class="form-label" id="city" placeholder="Enter city" default="@city" />
+				<div class="mt-3">
+					<label for=" City" class="form-label">City:</label><br />
+					<input type="text" class="form-control" id="city" placeholder="Enter city" default="@city" />
 				</div>
 			</form>
 
 			<div>
-				<button id="searchcity" onclick="FindNewCity(Search())">Find</button>
+				<button class="btn-sm" id="searchcity" onclick="FindNewCity(Search())">Find</button>
 			</div>
 
 			@*<p>Latitude: @Model.</p>
