--- a/CNewsProject/Views/Shared/_LayoutNews.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNews.cshtml
@@ -109,6 +109,8 @@
 		&copy; @DateTime.Now.Year - CNewsProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 	</div>
 
+	<partial name="_CookieConsentPartial" />
+
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
