Changed some stuff

--- a/CNewsProject/Views/Admin/Index.cshtml
+++ b/CNewsProject/Views/Admin/Index.cshtml
@@ -4,3 +4,4 @@
 
 <a class="btn btn-primary" asp-action="Roles">Roles</a>
 <a class="btn btn-primary" asp-action="Users">Users</a>
+<a class="btn btn-primary" asp-action="SubscriptionTypes">Subscriptions</a>
