--- a/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Rates
 
 <div class="card">
+    <div class="card-body">
     <h3>Exchange rates</h3>
     @{
         // Calculating base exchange rates for 100 SEK and ensuring correct formatting
@@ -46,4 +47,5 @@
         });
 
     </script>
+    </div>
 </div>
