--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -15,6 +15,7 @@
 <div class="weather-details">
 	<div class="weather-info">
 		<div class="card">
+			<div class="card-body">
 			<h3 id="place" >Weather: @Model.NameOfCity</h3>
 			<form>
 				<div class="mt-3">
@@ -23,17 +24,14 @@
 				</div>
 			</form>
 
-			<div>
+			<div class="p-2 ps-0">
 				<button class="btn-sm" id="searchcity" onclick="FindNewCity(Search())">Find</button>
 			</div>
-
-			@*<p>Latitude: @Model.</p>
-			<p>Longitude: @Model.geometry.type</p>
-			<p>Timezone: @Model.referenceTime.</p> *@
 			<p>Time: @hourMin</p>
 			<p>Temperature: @temperature.values[0] °C</p>
 			<div class="weather-icon">☀️</div>
-			<p><a href="https://www.smhi.se/en/q/Linköping/2694762">Weather SMHI</a></p>
+				<p><a href="https://www.smhi.se/en/q/Linköping/2694762">Weather SMHI</a></p>
+			</div>
 		</div>
 	</div>
 
