SubTypes fixed. Cookie consent Update ;)

--- a/CNewsProject/Views/News/Index.cshtml
+++ b/CNewsProject/Views/News/Index.cshtml
@@ -23,6 +23,10 @@
 	// ^^ DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX ^^
 }
 
+<audio hidden id="mumsaudio" controls="controls">
+    <source src="~/content/audio/mums.mp3" type="audio/mpeg" />
+</audio>
+
 <section class="main-article">
 	<partial name="_ArticlePartial" model="@Model.MainArticle" />
 </section>
@@ -34,7 +38,3 @@
 		</div>
 	}
 </section>
-
-
-
-
