--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -20,7 +20,7 @@
 			<form>
 				<div class="mt-3">
 					<label for=" City" class="form-label">City:</label><br />
-					<input type="text" class="form-control" id="city" placeholder="Enter city" default="@city" />
+					<input type="text" class="form-control" id="city" placeholder="@Model.NameOfCity" default="@city" />
 				</div>
 			</form>
 
