--- a/CNewsProject/Views/Shared/Components/JournalistArticles/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/JournalistArticles/Default.cshtml
@@ -32,7 +32,7 @@
 }
 
 
-<h3>Pending</h3>
+@* <h3>Pending</h3>
 <div style="overflow:auto; max-height:150px">
     @{
         if (Model.Pending.Count() == 0)
@@ -83,3 +83,4 @@
     }
 </div>
 
+ *@
