--- a/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
@@ -2,7 +2,9 @@
 
 <div class="card">
     <div class="card-body">
+        <div style="background-color:#dee6ef;">
     <h3>Exchange rates</h3>
+        </div>
     @{
         // Calculating base exchange rates for 100 SEK and ensuring correct formatting
         string usd = (Model.USD * 100).ToString("F2");
