--- a/CNewsProject/Views/Shared/Components/ExchangeAll/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/ExchangeAll/Default.cshtml
@@ -2,7 +2,9 @@
 
 <div class="card">
     <div class="card-body">
+        <div style="background-color:#dee6ef;">
     <h3>Exchange rates</h3>
+        </div>
     
     @{
         string aed = string.Format("{0:F2}", Convert.ToDecimal(Model.AED * 100));
