--- a/CNewsProject/Views/Shared/Components/SidebarHeadlines/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/SidebarHeadlines/Default.cshtml
@@ -4,7 +4,7 @@
 	td {
 		border-bottom: solid lightgray 1px;
 		border-top: solid lightgray 1px;
-		padding-left: 5px;
+		/* padding-left: 5px; */
 		height: 30px;
 	}
 
@@ -20,8 +20,11 @@
 </style>
 
 <div class="card">
+	<div class="card-body">
 	<br />
-	<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>Local News</h2></a>
+		<div style="background-color:#dee6ef;">
+		<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>Local News</h2></a>
+		</div>
 	<table>
 		@{
 			foreach (var item in Model.localArticles)
@@ -30,7 +33,9 @@
 			}
 		}
 	</table><br />
+		<div style="background-color:#dee6ef;">
 	<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>Sweden News</h2></a>
+		</div>
 	<table>
 		@{
 			foreach (var item in Model.swedenArticles)
@@ -39,8 +44,9 @@
 			}
 		}
 	</table><br />
+			<div style="background-color:#dee6ef;">
 	<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>World News</h2></a>
-	<table>
+			</div><table>
 		@{
 			foreach (var item in Model.worldArticles)
 			{
@@ -48,7 +54,9 @@
 			}
 		}
 	</table><br />
+				<div style="background-color:#dee6ef;">
 	<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>Economy News</h2></a>
+				</div>
 	<table>
 		@{
 			foreach (var item in Model.economyArticles)
@@ -57,7 +65,9 @@
 			}
 		}
 	</table><br />
+					<div style="background-color:#dee6ef;">
 	<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>Sport News</h2></a>
+					</div>
 	<table>
 		@{
 			foreach (var item in Model.sportArticles)
@@ -66,4 +76,5 @@
 			}
 		}
 	</table>
+	</div>
 </div>
