--- a/CNewsProject/Views/Shared/_Layout.cshtml
+++ b/CNewsProject/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
 							<a class="nav-link text-light" asp-controller="News" asp-action="Sport">Sport</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" asp-controller="Articles" asp-action="Archive">Archive</a>
+							<a class="nav-link" asp-controller="News" asp-action="Archive">Archive</a>
 						</li>
 						@{
 							if (httpContextAccessor.HttpContext.User != null)
