--- a/CNewsProject/Views/Shared/_Layout.cshtml
+++ b/CNewsProject/Views/Shared/_Layout.cshtml
@@ -92,10 +92,7 @@
 						}
 					</ul>
 					<partial name="_LoginPartial" />
-					<form class="d-flex" role="search" asp-controller="News" asp-action="Search" method="post">
-						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
-						<button class="btn btn-success" type="submit">Search</button>
-					</form>
+					<partial name="_SearchBarPartial" />
 				</div>
 			</div>
 		</nav>
