Hello guys. Welcome to my YouTube channel. Today I will be doing some stuff that is not relevant to my branch name. I hope you can forgive me. I am doing the better performance on the ExchangeViewComponent. Yes. It is slow. Yes. It needs to be smarter application. Right now the VC in itself is good but the application of the VC slows down the page. I fixed that but now it loads in slow. I will make new original smart application solution in the next viteo. Please Liek and Subscrajb.!

--- a/CNewsProject/Views/Shared/_LayoutNews.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNews.cshtml
@@ -101,7 +101,10 @@
 			<div id="VCWeather">
 				<vc:weather name-of-city=""></vc:weather>
 			</div><br />
-			<vc:exchange></vc:exchange><br />
+			
+			<div id="ExchangeVCDiv"> @*Guys we need to make this LOAD ASYNCHRONOUSLY*@
+				@* This Needs to be empty I think. Set all HEAVY ViewComponents to load via JavaScript (AJAX Request) *@
+			</div>
 			<vc:sidebar-headlines></vc:sidebar-headlines>
 		</aside>
 	</div>
@@ -115,5 +118,28 @@
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	@await RenderSectionAsync("Scripts", required: false)
-</body>
+	
+	<script type="text/javascript">
+		
+		console.log("Realised Local JAVASCRIPT");
+		document.addEventListener('DOMContentLoaded', function() {
+			console.log("Document Loaded");
+			LoadExchangeVCAjax();
+		});
+		
+		function LoadExchangeVCAjax(){
+			$.ajax({
+				url: '@Url.Action("LoadViewComponent", "LoadExchange")',
+				type: 'GET',
+				success: function (result) {
+					$('#ExchangeVCDiv').html(result);
+				},
+				error: function (error){
+					console.log('Failed to load ExchangeVC');
+				}
+			});
+		}
+		
+	</script>
+	</body>
 </html>
