--- a/CNewsProject/Views/_ViewImports.cshtml
+++ b/CNewsProject/Views/_ViewImports.cshtml
@@ -8,4 +8,4 @@
 @addTagHelper CNewsProject.CustomTagHelpers.*, CNewsProject
 @addTagHelper *, CNewsProject
 
-@inject IIdentityService _iService
+@* @inject IIdentityService _iService *@
