--- a/CNewsProject/Views/News/Index.cshtml
+++ b/CNewsProject/Views/News/Index.cshtml
@@ -1,19 +1,12 @@
 @model FrontPageArticlesVM
-
+@inject IIdentityService IdentityService
 @{
 	// vv DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX vv
 	if (User.Identity.IsAuthenticated)
 	{
-		if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
-		{
-			Layout = "_LayoutNewsFire";
-			ViewData["Title"] = "Local Fire News";
-		}
-		else                                             // << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
-		{
-			Layout = "_LayoutNews";
-			ViewData["Title"] = "Local News";
-		}
+		Layout = IdentityService.GetAppUserByClaimsPrincipal(User).Result.Fire ? "_LayoutNewsFire" :
+			// << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
+			"_LayoutNews";
 	}
 	else
 	{
