--- a/CNewsProject/Views/News/Sport.cshtml
+++ b/CNewsProject/Views/News/Sport.cshtml
@@ -1,19 +1,13 @@
 @model CategoryPageArticlesVM
+@inject IIdentityService IdentityService
 
 @{
     // vv DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX vv
-    if (User.Identity.IsAuthenticated)
+    if (User.Identity!.IsAuthenticated)
     {
-        if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
-        {
-            Layout = "_LayoutNewsFire";
-            ViewData["Title"] = "Sport Fire News";
-        }
-        else                                             // << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
-        {
-            Layout = "_LayoutNews";
-            ViewData["Title"] = "Sport News";
-        }
+        Layout = IdentityService.GetAppUserByClaimsPrincipal(User).Result.Fire ? "_LayoutNewsFire" :
+            // << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
+            "_LayoutNews";
     }
     else
     {
