--- a/CNewsProject/Views/_ViewStart.cshtml
+++ b/CNewsProject/Views/_ViewStart.cshtml
@@ -1,15 +1,13 @@
-﻿@{
+﻿
+@inject IIdentityService IdentityService
+
+@{
     // vv DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX vv
     if (User.Identity.IsAuthenticated)
     {
-        if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
-        {
-            Layout = "_LayoutFire";
-        }
-        else                                             // << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
-        {
-            Layout = "_Layout";
-        }
+        Layout = IdentityService.GetAppUserByClaimsPrincipal(User).Result.Fire ? "_LayoutFire" :
+            // << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
+            "_Layout";
     }
     else
     {
