fixed search, added register button

--- a/CNewsProject/Views/Shared/_LayoutFire.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutFire.cshtml
@@ -27,7 +27,7 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar fixed-top navbar-expand-lg navbar-dark navfire" style="background-color: #b2b2b2">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-dark navfire" style="background-color: #a6a6a6">
 			<div class="container-fluid">
 				<a class="navbar-brand" asp-area="" asp-controller="News" asp-action="Index">
 					<img src="/content/images/cnewslogofire.png" alt="News Logo" style="height: 50px;">
