--- a/CNewsProject/Views/Account/Login.cshtml
+++ b/CNewsProject/Views/Account/Login.cshtml
@@ -20,6 +20,7 @@
         Remember me? <input type="checkbox" asp-for="RememberMe" />
     </div>
     <button class="btn btn-primary" type="submit">Log In</button>
+    <button asp-action="Register" class="btn btn-primary">Register</button>
 
     <br />
     <a asp-action="ForgotPassword">Reset Password</a>
