--- a/CNewsProject/Views/Shared/_Layout.cshtml
+++ b/CNewsProject/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #b2b2b2">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #a6a6a6">
 			<div class="container-fluid">
 				<a class="navbar-brand" asp-area="" asp-controller="News" asp-action="Index">
 					<img src="/content/images/cnewslogo.png" alt="News Logo" style="height: 50px;">
