--- a/CNewsProject/Views/Shared/_LayoutNews.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNews.cshtml
@@ -48,6 +48,9 @@
 						<li class="nav-item">
 							<a class="nav-link" asp-controller="News" asp-action="Archive">Archive</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Subscribe Now</a>
+						</li>
 						@{
 							if (httpContextAccessor.HttpContext.User != null)
 							{
