Function For Archiving Articles breee. Also some other stuff with performance on ExchangeRates. It now only takes 1 to 0 ms instead of 4500 everytime.

--- a/CNewsProject/Views/News/Local.cshtml
+++ b/CNewsProject/Views/News/Local.cshtml
@@ -1,3 +1,4 @@
+@using System.Web
 @model CategoryPageArticlesVM
 @inject IIdentityService IdentityService
 
@@ -16,6 +17,7 @@
 	}
 	// ^^ DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX ^^
 }
+
 
 <section class="main-article">
 	<partial name="_ArticlePartial" model="@Model.MainArticle" />
