--- a/CNewsProject/Views/News/Sweden.cshtml
+++ b/CNewsProject/Views/News/Sweden.cshtml
@@ -1,3 +1,5 @@
+@using System.Web
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model CategoryPageArticlesVM
 @inject IIdentityService IdentityService
 
@@ -17,6 +19,12 @@
     // ^^ DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX ^^
 }
 
+
+@{
+	string msg = "<a href='http://www.google.com/html/'>Google</a>";
+}
+
+@Html.Raw(HttpUtility.HtmlDecode(@msg))
 <section class="main-article">
 	<partial name="_ArticlePartial" model="@Model.MainArticle" />
 </section>
