--- a/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
@@ -1,5 +1,4 @@
 ﻿@using CNewsProject.StaticTempData
-@model Rates
 
 <div class="card">
     <div class="card-body">
@@ -8,11 +7,11 @@
         </div>
     @{
         // Calculating base exchange rates for 100 SEK and ensuring correct formatting
-        string usd = (Model.USD * 100).ToString("F2");
-        string eur = (Model.EUR * 100).ToString("F2");
-        string jpy = (Model.JPY * 100).ToString("F2");
-        string cny = (Model.CNY * 100).ToString("F2");
-        string gbp = (Model.GBP * 100).ToString("F2");
+        // string usd = (Model.USD * 100).ToString("F2");
+        // string eur = (Model.EUR * 100).ToString("F2");
+        // string jpy = (Model.JPY * 100).ToString("F2");
+        // string cny = (Model.CNY * 100).ToString("F2");
+        // string gbp = (Model.GBP * 100).ToString("F2");
     }
 
     <p>Enter the amount in SEK:</p>
