Added  a little a bout the payment but it is not finish

--- a/CNewsProject/Views/Shared/Components/ArticleLocker/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/ArticleLocker/Default.cshtml
@@ -46,7 +46,7 @@
             <div>
                 <h5>@Model.Article.Headline</h5>
                 <p>@Model.Article.ContentSummary</p>
-                <a href="@Url.Action("Detials", "News", new {id = Model.Article.Id})" class="btn btn-success">Read More</a>
+                <a href="@Url.Action("Details", "News", new {id = Model.Article.Id})" class="btn btn-success">Read More</a>
             </div>
 
         </div>
