I optimized some stuff.

--- a/CNewsProject/Views/News/Archive.cshtml
+++ b/CNewsProject/Views/News/Archive.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IGrouping<int, IGrouping<int, Article>>>
+﻿@model List<Article>
 
 @{
     ViewData["Title"] = "Article Archive";
@@ -6,23 +6,4 @@
 
 <h2>Article Archive</h2>
 
-@foreach (var yearGroup in Model)
-{
-    <h3>@yearGroup.Key</h3>
-
-    @foreach (var monthGroup in yearGroup)
-    {
-        <h4>@System.Globalization.CultureInfo.CurrentCulture.DateTimeFormat.GetMonthName(monthGroup.Key)</h4>
-        <ul>
-            @foreach (var article in monthGroup)
-            {
-                <li>
-                    <a href="@Url.Action("Details", "News", new { id = article.Id })">
-                        @article.Headline
-                    </a>
-                    <small>(@article.PublishedDate.ToShortDateString())</small>
-                </li>
-            }
-        </ul>
-    }
-}
+WORK IN PROGRESS
