--- a/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
@@ -17,20 +17,20 @@
     <p>Enter the amount in SEK:</p>
     <input id="amountInSek" class="form-control mb-3" type="number" value="100" onchange="updateExchangeRates()" />
     <ul>
-        <li id="liusd">USD : @ExchangeRateData.USD $</li>
-        <li id="lieur">EUR : @ExchangeRateData.EUR €</li>
-        <li id="lijpy">JPY : @ExchangeRateData.JPY Yen</li>
-        <li id="licny">CNY : @ExchangeRateData.CNY Yuán</li>
-        <li id="ligbp">GBP : @ExchangeRateData.GBP £</li>
+        <li id="liusd">USD : @CTempData.ExchangeRates.USD $</li>
+        <li id="lieur">EUR : @CTempData.ExchangeRates.EUR €</li>
+        <li id="lijpy">JPY : @CTempData.ExchangeRates.JPY Yen</li>
+        <li id="licny">CNY : @CTempData.ExchangeRates.CNY Yuán</li>
+        <li id="ligbp">GBP : @CTempData.ExchangeRates.GBP £</li>
     </ul>
 
     <script type="text/javascript">
         // Parsing Razor variables as floats in JavaScript
-        let usdRate = parseFloat('@(ExchangeRateData.USD.ToString(System.Globalization.CultureInfo.InvariantCulture))');
-        let eurRate = parseFloat('@(ExchangeRateData.EUR.ToString(System.Globalization.CultureInfo.InvariantCulture))');
-        let jpyRate = parseFloat('@(ExchangeRateData.JPY.ToString(System.Globalization.CultureInfo.InvariantCulture))');
-        let cnyRate = parseFloat('@(ExchangeRateData.CNY.ToString(System.Globalization.CultureInfo.InvariantCulture))');
-        let gbpRate = parseFloat('@(ExchangeRateData.GBP.ToString(System.Globalization.CultureInfo.InvariantCulture))');
+        let usdRate = parseFloat('@(CTempData.ExchangeRates.USD.ToString(System.Globalization.CultureInfo.InvariantCulture))');
+        let eurRate = parseFloat('@(CTempData.ExchangeRates.EUR.ToString(System.Globalization.CultureInfo.InvariantCulture))');
+        let jpyRate = parseFloat('@(CTempData.ExchangeRates.JPY.ToString(System.Globalization.CultureInfo.InvariantCulture))');
+        let cnyRate = parseFloat('@(CTempData.ExchangeRates.CNY.ToString(System.Globalization.CultureInfo.InvariantCulture))');
+        let gbpRate = parseFloat('@(CTempData.ExchangeRates.GBP.ToString(System.Globalization.CultureInfo.InvariantCulture))');
 
         function updateExchangeRates() {
             const amountInSek = parseFloat(document.getElementById('amountInSek').value);
