--- a/CNewsProject/Views/News/Sweden.cshtml
+++ b/CNewsProject/Views/News/Sweden.cshtml
@@ -20,11 +20,12 @@
 }
 
 
-@{
-	string msg = "<a href='http://www.google.com/html/'>Google</a>";
-}
+@* @{ *@
+@* 	string msg = "<a href='http://www.google.com/html/'>Google</a>"; *@
+@* } *@
+@* *@
+@* @Html.Raw(HttpUtility.HtmlDecode(@msg)) *@
 
-@Html.Raw(HttpUtility.HtmlDecode(@msg))
 <section class="main-article">
 	<partial name="_ArticlePartial" model="@Model.MainArticle" />
 </section>
