--- a/CNewsProject/Views/Shared/_LayoutNews.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNews.cshtml
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #a6a6a6">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #999999">
 			<div class="container-fluid">
 				<a class="navbar-brand" asp-area="" asp-controller="News" asp-action="Index">
 					<img src="/content/images/cnewslogo.png" alt="News Logo" style="height: 50px;">
@@ -47,9 +47,6 @@
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" asp-controller="News" asp-action="Archive">Archive</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Subscribe Now</a>
 						</li>
 						@{
 							if (httpContextAccessor.HttpContext.User != null)
@@ -114,10 +111,12 @@
 			<vc:sidebar-headlines></vc:sidebar-headlines>
 		</aside>
 	</div>
-	<div class="fixed-bottom d-none d-md-block">
+	<div class="fixed-bottom d-none d-md-block" style="z-index: 1">
 		&copy; @DateTime.Now.Year - CNewsProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 	</div>
-
+	<audio hidden id="mumsaudio" controls="controls">
+		<source src="~/content/audio/mums.mp3" type="audio/mpeg" />
+	</audio>
 	<partial name="_CookieConsentPartial" />
 
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
