--- a/CNewsProject/Views/Account/Profile.cshtml
+++ b/CNewsProject/Views/Account/Profile.cshtml
@@ -26,6 +26,11 @@
 	<button type="submit" class="btn btn-primary">Save</button>
 </form>
 
+
+<li class="nav-item">
+	<a class="nav-link btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Subscribe Now</a>
+</li>
+
 @*I'm thinking a View Component here so you don't have to refresh page on EDIT*@
 
 
