--- a/CNewsProject/Views/News/Index.cshtml
+++ b/CNewsProject/Views/News/Index.cshtml
@@ -11,14 +11,10 @@
 	else
 	{
 		Layout = "_LayoutNews";
-		ViewData["Title"] = "Local News";
+		ViewData["Title"] = "CNews";
 	}
 	// ^^ DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX ^^
 }
-
-<audio hidden id="mumsaudio" controls="controls">
-    <source src="~/content/audio/mums.mp3" type="audio/mpeg" />
-</audio>
 
 <section class="main-article">
 	<partial name="_ArticlePartial" model="@Model.MainArticle" />
