--- a/CNewsProject/Views/Shared/_LayoutNewsFire.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNewsFire.cshtml
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar fixed-top navbar-expand-lg navbar-dark navfire" style="background-color: #a6a6a6">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-dark navfire" style="background-color: #999999">
 			<div class="container-fluid">
 				<a class="navbar-brand" asp-area="" asp-controller="News" asp-action="Index">
 					<img src="/content/images/cnewslogofire.png" alt="News Logo" style="height: 50px;">
@@ -104,10 +104,12 @@
 			<vc:sidebar-headlines></vc:sidebar-headlines>
 		</aside>
 	</div>
-	<div class="fixed-bottom d-none d-md-block">
+	<div class="fixed-bottom d-none d-md-block" style="z-index: 1">
 		&copy; @DateTime.Now.Year - CNewsProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 	</div>
-
+	<audio hidden id="mumsaudio" controls="controls">
+		<source src="~/content/audio/mums.mp3" type="audio/mpeg" />
+	</audio>
 	<partial name="_CookieConsentPartial" />
 
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
