--- a/CNewsProject/Views/Journalist/CreateArticle.cshtml
+++ b/CNewsProject/Views/Journalist/CreateArticle.cshtml
@@ -13,17 +13,19 @@
 
     <div class="mb-3">
         <label asp-for="Headline">Headline</label>
-        <input type="text" asp-for="Headline" />
+        <input type="http" asp-for="Headline" />
     </div>
 
     <div class="mb-3">
         <label asp-for="ContentSummary">Summary</label>
-        <textarea asp-for="ContentSummary" rows="4" cols="50"></textarea>
+        <textarea type="http"  asp-for="ContentSummary" rows="4" cols="50"></textarea>
+        
     </div>
 
     <div class="mb-3">
         <label asp-for="Content">Content</label>
-        <textarea asp-for="Content" rows="8" cols="50"></textarea>
+        <textarea type="http"  asp-for="Content" rows="8" cols="50"></textarea>
+        
     </div>
 
     <div class="mb-3">
